+ links to starter & blog

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Mourad Personal Page</title>
 </head>
 
@@ -15,9 +17,11 @@
         </div>
         <nav class="navigation">
             <a href="#">Home</a>
+            <a href="http://mouradev.pythonanywhere.com/" target="_blank">Starter Web app</a>
+            <a href="http://mouradev.pythonanywhere.com/blog" target="_blank">Blog</a>
+            <!-- <a href="http://mouradev.pythonanywhere.com/" target="_blank">Portfolio</a>
             <a href="#">About</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="#">Contact</a> -->
         </nav>
     </header>
 
@@ -26,17 +30,31 @@
             <div class="text-content">
                 <h1>It's time to amplify your online business</h1>
                 <p>Build a beautiful, modern website with flexible Bootstrap components built from scratch.</p>
+                <h3>I made a Django project starter for developers</h3>
+                <p>Click on <a href="http://mouradev.pythonanywhere.com/starter" target="_blank"
+                        rel="noopener noreferrer">Starter</a> on the menu to use
+                    it, enjoy !
+
+                </p>
+                <p>If you are a developer , you can find helpful tutorials,
+                    guides and tips on my <a href="http://mouradev.pythonanywhere.com/" target="_blank"
+                        rel="noopener noreferrer">blog</a> </p>
             </div>
             <div class="image-holder">
-                <img src="assets/img/illustrations/illustration-1.svg" alt="illustration">
+                <img src="assets/img/illustrations/illustration-14.svg" alt="illustration">
             </div>
         </div>
     </main>
 
 
     <footer>
-        &copy; 2023 Mourad personal Github page. All rights reserved.
+        <span>mourad.dev2@gmail.com</span>
+        <span>+212688582296</span>
+        <!-- <p style="display: inline; margin-right: 10px;"><img src="" alt="Email icon">mourad.dev2@gmail.com</p>
+        <p style="display: inline; margin-right: 10px;"><img src="" alt="Whatsapp icon">+212688582296</p> -->
+        <span>&copy; 2023 Mourad personal Github page. All rights reserved.</span>
     </footer>
+
 </body>
 
 </html>
